fix: fix animation image placement ~ the animation image on login/signup was overlapping the text above it

--- a/layouts/Layout.module.scss
+++ b/layouts/Layout.module.scss
@@ -35,7 +35,7 @@
 .slider_image.active {
   opacity: 1;
 }
-.img_contaner {
+.img_container {
   transition: opacity 3s ease-in-out;
 }
 .fadeIn {
